package edu.fiuba.algo3.modelo.edificios;

public class Bolsa implements Edificio{

    String pista;
    public String mostrarPista() {
        return pista;
    }
}
