package edu.fiuba.algo3.modelo.edificios;

public class Puerto extends Edificio{
    public Puerto(String pista) {
        super(pista);
    }
}
