package edu.fiuba.algo3.modelo.sitios;

import edu.fiuba.algo3.modelo.Jugador;

public interface Sitio {
    String mostrarInfo();
}


