package edu.fiuba.algo3.modelo.sitios.edificios;

import edu.fiuba.algo3.modelo.Jugador;

public class Banco extends Edificio{
    public Banco(String pista) {
        super(pista, "Banco");
    }
}
